server/k8s/backend.yaml
# Go app deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: majithas/todo-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: go-app
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
  type: ClusterIP
