server/k8s/ingress.yaml
# apply this 
  # kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 9000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 9000
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 9000


 # skip the hosts means (host: example.com)    
 # it becomes catch all rule
 # it match any host name or ip
 # k8s ingress controller watches kind: ingress (Kubernetes API Server → kind: Ingress)
 # its does not care about host to detect your ingress
 # its care about 
   # 1. ingressClassName: nginx  or
   # 2. other annotations   (kubernetes.io/ingress.class: nginx)

# rules:
# - http:
#     paths:
#     - path: /
#       backend:
#         service:
#           name: frontend-service

# This means:

  # For ANY host
  # For ANY domain
  # For ANY IP
  # If path matches /, forward traffic.
